--- a/.github/workflows/scanner-test.yml
+++ b/.github/workflows/scanner-test.yml
@@ -8,7 +8,7 @@ jobs:
        - name: Checkout
          uses: actions/checkout@v2
        - name: Malware Scanner
-         uses: malware-scanner@v1
+         uses: malware-scanner
          with:
              directories: ./...
              options: -rf
