--- a/.github/workflows/scanner-test.yml
+++ b/.github/workflows/scanner-test.yml
@@ -1,9 +1,16 @@
-on: [push]
+# This workflow is for scanning this repo for malware
+name: malware-scanner
+
+on:
+    push:
+      branches: [ main ]
+    pull_request:
+      branches: [ main ]
 
 jobs:
-  scanner:
+    malware-security-scan:
     runs-on: ubuntu-latest
-    name: Scan
+    name: Malware Scanner
     steps:
        - name: Checkout
          uses: actions/checkout@v2
