--- a/go-security/Dockerfile
+++ b/go-security/Dockerfile
@@ -7,6 +7,12 @@ LABEL "com.github.actions.color"="gray-dark"
 
 LABEL version="1.0.0"
 
+# Install gosec
+RUN apt-get update
+RUN apt-get -y install curl
+RUN curl -sfL https://raw.githubusercontent.com/securego/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin latest
+RUN gosec --help
+
 COPY "entrypoint.sh" "/entrypoint.sh"
 RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
