--- a/go-code-formatter-linter-vetter/action.yml
+++ b/go-code-formatter-linter-vetter/action.yml
@@ -5,7 +5,7 @@
 # You may obtain a copy of the License at
 #
 #  http://www.apache.org/licenses/LICENSE-2.0
-name: 'Check Formating, Linting, Vetting'
+name: 'Check Formatting, Linting, Vetting'
 description: 'Runs gofmt, golint, and go vet'
 
 inputs:
