Add a way to go vet in a particular directory (#45)

--- a/go-code-formatter-linter-vetter/action.yml
+++ b/go-code-formatter-linter-vetter/action.yml
@@ -5,12 +5,16 @@
 # You may obtain a copy of the License at
 #
 #  http://www.apache.org/licenses/LICENSE-2.0
-name: 'Check Formating, Linting, Vetting'
+name: 'Check Formatting, Linting, Vetting'
 description: 'Runs gofmt, golint, and go vet'
 
 inputs:
   directories:
-    description: 'Directories to run checks'
+    description: >
+      Directories to run checks. Format is:
+        directories: [--vet-in-dir <VET_DIR>] <DIRS>
+      As shown, you can optionally specify '--vet-in-dir' for cases where the module is
+      defined within a specific directory and you would like to run the 'go vet' there.
     required: true
     default: './...'
 
