--- a/go-code-tester/action.yml
+++ b/go-code-tester/action.yml
@@ -12,6 +12,10 @@ inputs:
     description: 'Code coverage threshold for packages'
     required: true
     default: 90
+  test-folder:
+    description: 'Folder the test is run in'
+    required: true
+    default: "."
   skip-list:
     description: 'A comma delimited list of pkg names to skip for coverage constraint'
     required: false
