forgot to add arg

--- a/go-code-tester/action.yml
+++ b/go-code-tester/action.yml
@@ -25,6 +25,7 @@ runs:
   image: 'Dockerfile'
   args:
     - ${{ inputs.threshold }}
+    - ${{ inputs.test-folder }}
     - ${{ inputs.skip-list }}
 branding:
   icon: 'shield'
