--- a/gosec-runner/action.yml
+++ b/gosec-runner/action.yml
@@ -10,12 +10,11 @@ description: 'Runs gosec'
 
 inputs:
   directories:
-    description: >
-      Directories to run gosec. Default is './...'
+    description: 'Directories to run gosec in'
     required: false
     default: './...'
   excludes:
-    description: 'exclude arguments to run with gosec'
+    description: 'Exclude arguments to run with gosec. List them as such: G304,G208,G215'
     required: false
     default: ""
 
