--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -26,4 +26,4 @@
 # Matt Schmaelzle (mjsdell)
 
 # for all files:
-* @gallacher @tdawe @alikdell @atye @hoppea2 @shaynafinocchiaro @sharmilarama @EvgenyUglov @bjiang27 @isaiasA1 @arnchiequ-dell @xuluna @AkshaySainiDell @satyakonduri @bharathsreekanth @mjsdell
+* @gallacher @tdawe @alikdell @atye @hoppea2 @shaynafinocchiaro @sharmilarama @EvgenyUglov @bjiang27 @isaiasA1 @arnchiequ-dell @xuluna @AkshaySainiDell @satyakonduri @adarsh-dell @bharathsreekanth @mjsdell
