--- a/go-code-tester/action.yml
+++ b/go-code-tester/action.yml
@@ -11,7 +11,7 @@ inputs:
   threshold:
     description: 'Code coverage threshold for packages'
     required: true
-    default: 90
+    default: "90"
   test-folder:
     description: 'Folder the test is run in'
     required: false
@@ -20,6 +20,10 @@ inputs:
     description: 'A comma delimited list of pkg names to skip for coverage constraint'
     required: false
     default: ""
+  race-detector:
+    description: 'Boolean to indicate running tests with the race detector'
+    required: false
+    default: "true"
 runs:
   using: 'docker'
   image: 'Dockerfile'
