--- a/go-code-tester/action.yml
+++ b/go-code-tester/action.yml
@@ -1,4 +1,4 @@
-# Copyright (c) 2020 Dell Inc., or its subsidiaries. All Rights Reserved.
+# Copyright (c) 2020-2023 Dell Inc., or its subsidiaries. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -31,6 +31,7 @@ runs:
     - ${{ inputs.threshold }}
     - ${{ inputs.test-folder }}
     - ${{ inputs.skip-list }}
+    - ${{ inputs.race-detector }}
 branding:
   icon: 'shield'
   color: 'blue'
