update readme and grep

--- a/go-code-tester/action.yml
+++ b/go-code-tester/action.yml
@@ -21,7 +21,7 @@ inputs:
     required: false
     default: ""
   race-detector:
-    description: 'Boolean to indicate running tests with the race detector'
+    description: 'Boolean to enable the race detector'
     required: false
     default: "true"
 runs:
