--- a/go-code-tester/action.yml
+++ b/go-code-tester/action.yml
@@ -1,4 +1,4 @@
-# Copyright (c) 2020 Dell Inc., or its subsidiaries. All Rights Reserved.
+# Copyright (c) 2020-2023 Dell Inc., or its subsidiaries. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -11,7 +11,7 @@ inputs:
   threshold:
     description: 'Code coverage threshold for packages'
     required: true
-    default: 90
+    default: "90"
   test-folder:
     description: 'Folder the test is run in'
     required: false
@@ -20,6 +20,10 @@ inputs:
     description: 'A comma delimited list of pkg names to skip for coverage constraint'
     required: false
     default: ""
+  race-detector:
+    description: 'Boolean to enable the race detector'
+    required: false
+    default: "true"
 runs:
   using: 'docker'
   image: 'Dockerfile'
@@ -27,6 +31,7 @@ runs:
     - ${{ inputs.threshold }}
     - ${{ inputs.test-folder }}
     - ${{ inputs.skip-list }}
+    - ${{ inputs.race-detector }}
 branding:
   icon: 'shield'
   color: 'blue'
