--- a/gosec-runner/Dockerfile
+++ b/gosec-runner/Dockerfile
@@ -7,7 +7,7 @@ LABEL "com.github.actions.color"="gray-dark"
 
 LABEL version="1.0.0"
 
-ENV GGOFLAGS="-buildvcs=false"
+ENV GOFLAGS="-buildvcs=false"
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
