--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -24,6 +24,9 @@
 # Adarsh Kumar Yadav (adarsh-dell)
 # Bharath Sreekanth (bharathsreekanth)
 # Matt Schmaelzle (mjsdell)
+# Chiman Jain (chimanjain)
+# Harish H  (HarishH-DELL)
+# Nitesh Rewatkar (nitesh3108)
 
 # for all files:
-* @gallacher @tdawe @alikdell @atye @hoppea2 @shaynafinocchiaro @sharmilarama @EvgenyUglov @bjiang27 @isaiasA1 @arnchiequ-dell @xuluna @AkshaySainiDell @satyakonduri @adarsh-dell @bharathsreekanth @mjsdell
+* @gallacher @tdawe @alikdell @atye @hoppea2 @shaynafinocchiaro @sharmilarama @EvgenyUglov @bjiang27 @isaiasA1 @arnchiequ-dell @xuluna @AkshaySainiDell @satyakonduri @adarsh-dell @bharathsreekanth @mjsdell @chimanjain @HarishH-DELL @nitesh3108
