--- a/.github/workflows/go-static-analysis.yaml
+++ b/.github/workflows/go-static-analysis.yaml
@@ -75,6 +75,7 @@ jobs:
         run: |
           pip install yamllint
       - name: Grab yamllint config file
+        continue-on-error: true
         run: |
           echo "Grabbing Yaml config file from: https://raw.githubusercontent.com/$WF_ORG/$WF_REPO/main/$WF_CONFIGS/yamllint/yamllint.yaml"
           curl -O -f https://raw.githubusercontent.com/$WF_ORG/$WF_REPO/main/$WF_CONFIGS/yamllint/yamllint.yaml
