--- a/go-code-tester/action.yml
+++ b/go-code-tester/action.yml
@@ -1,4 +1,4 @@
-# Copyright (c) 2020-2023 Dell Inc., or its subsidiaries. All Rights Reserved.
+# Copyright (c) 2020-2024 Dell Inc., or its subsidiaries. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -24,6 +24,10 @@ inputs:
     description: 'Boolean to enable the race detector'
     required: false
     default: "true"
+  skip-test:
+    description: 'Regex for sipping tests'
+    required: false
+    default: ""
 runs:
   using: 'docker'
   image: 'Dockerfile'
@@ -32,6 +36,7 @@ runs:
     - ${{ inputs.test-folder }}
     - ${{ inputs.skip-list }}
     - ${{ inputs.race-detector }}
+    - ${{ inputs.skip-test }}
 branding:
   icon: 'shield'
   color: 'blue'
