--- a/.github/workflows/go-static-analysis.yaml
+++ b/.github/workflows/go-static-analysis.yaml
@@ -65,8 +65,9 @@ jobs:
       - name: Grab golangci-lint config file
         continue-on-error: true
         run: |
-          echo "Grabbing config file from: https://raw.githubusercontent.com/$WF_ORG/$WF_REPO/$WF_CONFIGS_BRANCH/$WF_CONFIGS/golangci-lint/golangci.yaml"
-          curl -O -f https://raw.githubusercontent.com/$WF_ORG/$WF_REPO/$WF_CONFIGS_BRANCH/$WF_CONFIGS/golangci-lint/golangci.yaml
+          export CONFIG="$WF_ORG/$WF_REPO/$WF_CONFIGS_BRANCH/$WF_CONFIGS/golangci-lint/golangci.yaml"
+          echo "Grabbing config file from: https://raw.githubusercontent.com/$CONFIG"
+          curl -O -f https://raw.githubusercontent.com/$CONFIG
       - name: Vendor packages
         run: |
           go mod vendor
@@ -119,8 +120,9 @@ jobs:
       - name: Grab yamllint config file
         continue-on-error: true
         run: |
-          echo "Grabbing Yaml config file from: https://raw.githubusercontent.com/$WF_ORG/$WF_REPO/$WF_CONFIGS_BRANCH/$WF_CONFIGS/yamllint/yamllint.yaml"
-          curl -O -f https://raw.githubusercontent.com/$WF_ORG/$WF_REPO/$WF_CONFIGS_BRANCH/$WF_CONFIGS/yamllint/yamllint.yaml
+          export CONFIG="$WF_ORG/$WF_REPO/$WF_CONFIGS_BRANCH/$WF_CONFIGS/yamllint/yamllint.yaml"
+          echo "Grabbing Yaml config file from: https://raw.githubusercontent.com/$CONFIG"
+          curl -O -f https://raw.githubusercontent.com/$CONFIG
       - name: Run yamllint
         run: |
           if [ -f yamllint.yaml ]; then
