--- a/.github/configs/golangci-lint/golangci.yaml
+++ b/.github/configs/golangci-lint/golangci.yaml
@@ -8,6 +8,7 @@ issues:
   max-same-issues: 0
   new: false
 output:
+  format: colored-line-number
   print-linter-name: true
   sort-results: true
   uniq-by-line: false
