--- a/.github/workflows/go-static-analysis.yaml
+++ b/.github/workflows/go-static-analysis.yaml
@@ -34,7 +34,7 @@ env:
   WF_ORG: dell
   WF_REPO: common-github-actions
   WF_CONFIGS: .github/configs
-  WF_CONFIGS_BRANCH: common-workflows
+  WF_CONFIGS_BRANCH: common-workflows # do not merge without this being set to default branch
 
 # Various jobs
 jobs:
