removing redundant scanners

--- a/.github/workflows/go-static-analysis.yaml
+++ b/.github/workflows/go-static-analysis.yaml
@@ -39,20 +39,8 @@ env:
 # Various jobs
 jobs:
 
-  # obsolete due to inclusion of golangci-lint check
-  # Check sources files for formatting, linting, and vetting issues.
-  #code-check:
-  #  name: Check Go formatting, linting, vetting
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - name: Checkout the code
-  #      uses: actions/checkout@v4
-  #    - name: Run the formatter, linter, and vetter
-  #      uses: dell/common-github-actions/go-code-formatter-linter-vetter@main
-  #      with:
-  #        directories: ${{ inputs.gotools_root }}
-
-  # Lints code with golangci-lint
+  # Lints code with golangci-lint (config is in .github/config/golangci-lint/golangci.yaml)
+  # Enabled linters include: lint, vet, fmt, gosec
   golangci-lint:
     name: Lint golang code
     runs-on: ubuntu-latest
@@ -78,18 +66,6 @@ jobs:
           version: latest
           skip-cache: true
           args: --config=golangci.yaml
-
-  # Inspects source code for security problems by scanning the Go AST and SSA code representation.
-  go_security_scan:
-    name: Go security
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v4
-      - name: Run Go Security
-        uses: securego/gosec@master
-        with:
-          args: ${{ inputs.gosec_args }} ${{ inputs.gotools_root }}
 
   # Check sources files for malware
   malware_security_scan:
