--- a/.github/workflows/go-static-analysis.yaml
+++ b/.github/workflows/go-static-analysis.yaml
@@ -14,38 +14,47 @@ name: Golang Static Analysis
 on:
   workflow_call:
 
+# permissions required for this workflow
+permissions:
+  contents: read
+
 # environment variables common across all jobs
 env:
   WF_ORG: dell
   WF_REPO: common-github-actions
   WF_CONFIGS: .github/configs
+  WF_CONFIGS_BRANCH: main
 
 # Various jobs
 jobs:
 
-  # Check sources files for formatting, linting, and vetting issues.
-  code-check:
-    name: Check Go formatting, linting, vetting
+  # Lints code with golangci-lint (config is in .github/config/golangci-lint/golangci.yaml)
+  # Enabled linters include: lint, vet, fmt, gosec
+  golangci-lint:
+    name: Lint golang code
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-go@v5
+        with:
+          go-version: "1.22"
+          cache: false
       - name: Checkout the code
         uses: actions/checkout@v4
-      - name: Run the formatter, linter, and vetter
-        uses: dell/common-github-actions/go-code-formatter-linter-vetter@main
+      - name: Grab golangci-lint config file
+        continue-on-error: true
+        run: |
+          export CONFIG="$WF_ORG/$WF_REPO/$WF_CONFIGS_BRANCH/$WF_CONFIGS/golangci-lint/golangci.yaml"
+          echo "Grabbing config file from: https://raw.githubusercontent.com/$CONFIG"
+          curl -O -f https://raw.githubusercontent.com/$CONFIG
+      - name: Vendor packages
+        run: |
+          go mod vendor
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v6
         with:
-          directories: ./...
-
-  # Inspects source code for security problems by scanning the Go AST and SSA code representation.
-  go_security_scan:
-    name: Go security
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v4
-      - name: Run Go Security
-        uses: securego/gosec@master
-        with:
-          args: ./...
+          version: latest
+          skip-cache: true
+          args: --config=golangci.yaml
 
   # Check sources files for malware
   malware_security_scan:
@@ -77,8 +86,9 @@ jobs:
       - name: Grab yamllint config file
         continue-on-error: true
         run: |
-          echo "Grabbing Yaml config file from: https://raw.githubusercontent.com/$WF_ORG/$WF_REPO/main/$WF_CONFIGS/yamllint/yamllint.yaml"
-          curl -O -f https://raw.githubusercontent.com/$WF_ORG/$WF_REPO/main/$WF_CONFIGS/yamllint/yamllint.yaml
+          export CONFIG="$WF_ORG/$WF_REPO/$WF_CONFIGS_BRANCH/$WF_CONFIGS/yamllint/yamllint.yaml"
+          echo "Grabbing Yaml config file from: https://raw.githubusercontent.com/$CONFIG"
+          curl -O -f https://raw.githubusercontent.com/$CONFIG
       - name: Run yamllint
         run: |
           if [ -f yamllint.yaml ]; then
