Disable yamllint errors for braces and brackets
With templated yaml, like is found in helm charts, the spacing is required.

--- a/.github/configs/yamllint/yamllint.yaml
+++ b/.github/configs/yamllint/yamllint.yaml
@@ -13,8 +13,8 @@ yaml-files:
   - ".yamllint"
 
 rules:
-  braces: enable
-  brackets: enable
+  braces: disable
+  brackets: disable
   colons: enable
   commas: enable
   comments:
