add dependabot config file

--- a/.github/workflows/go-version.yaml
+++ b/.github/workflows/go-version.yaml
@@ -10,7 +10,7 @@
 name: Go Version
 
 # Invocable as a reusable workflow
-# Manaully triggered workflow
+# Can be manually triggered
 on:
     workflow_dispatch:
     workflow_call:
