--- a/.github/workflows/go-version.yaml
+++ b/.github/workflows/go-version.yaml
@@ -28,18 +28,20 @@ jobs:
         uses: actions/checkout@v4
       - name: Check latest go version
         run: |
-          echo "GO_VERSION=$(curl -sL https://go.dev/VERSION?m=text) | awk 'NR==1{print $1}' | tr -cd '[:digit:].'" >> $GITHUB_ENV
+          echo "GO_VERSION_STRIPPED=$(curl -sL https://go.dev/VERSION?m=text | awk 'NR==1{print $1}' | tr -cd '[:digit:].')" >> $GITHUB_ENV
+          echo "GO_VERSION=$(curl -sL https://go.dev/VERSION?m=text | awk 'NR==1{print $1}')" >> $GITHUB_ENV
       - name: Update go version
         run: |
-          echo "Updating go version to ${{ env.GO_VERSION }}"
-          git checkout -b go-${{ env.GO_VERSION }}
-          go mod edit -go=${{ env.GO_VERSION }}
+          echo "Updating go version to ${{ env.GO_VERSION_STRIPPED }}"
+          git checkout -b go-${{ env.GO_VERSION_STRIPPED }}
+          go mod edit -go=${{ env.GO_VERSION_STRIPPED }}
+          go mod edit -toolchain=${{ env.GO_VERSION }}
       # Must allow GitHub Actions to create pull requests
       - name: Create pull request
         uses: peter-evans/create-pull-request@v4
         with:
-          branch: "go-${{ env.GO_VERSION }}"
-          commit-message: "Update go version to ${{ env.GO_VERSION }}"
-          title: "Update go version to ${{ env.GO_VERSION }}"
-          body: "PR opened by CSM release to update go version to ${{ env.GO_VERSION }}"
+          branch: "go-${{ env.GO_VERSION_STRIPPED }}"
+          commit-message: "Update go version to ${{ env.GO_VERSION_STRIPPED }}"
+          title: "Update go version to ${{ env.GO_VERSION_STRIPPED }}"
+          body: "PR opened by CSM release to update go version to ${{ env.GO_VERSION_STRIPPED }}"
           delete-branch: true
