--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,6 +7,7 @@
 # be requested for review when someone opens a pull request.
 # order is alphabetical for easier maintenance.
 #
+# Aron Suliman (AronAtDell)
 # Christian Coffield (ChristianAtDell)
 # Don Khan (donatwork)
 # Sean Gallacher (gallacher)
@@ -18,4 +19,4 @@
 
 
 # for all files:
-* @ChristianAtDell @donatwork @gallacher @hoppea2 @mjsdell @prablr79 @sharmilarama @shaynafinocchiaro
+* @AronAtDell @ChristianAtDell @donatwork @gallacher @hoppea2 @mjsdell @prablr79 @sharmilarama @shaynafinocchiaro
