--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -20,19 +20,19 @@ jobs:
     steps:
       - name: Checkout the code
         uses: actions/checkout@v4
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.23'
-      - name: Install dependencies
-        run: go mod tidy
-      - name: Build
-        run: go build -v ./...
-      - name: Run malware scan
-        uses: dell/common-github-actions/malware-scanner@reusuable-release-workflow
-        with:
-          directories: .
-          options: -ri          
+      # - name: Set up Go
+      #   uses: actions/setup-go@v5
+      #   with:
+      #     go-version: '1.23'
+      # - name: Install dependencies
+      #   run: go mod tidy
+      # - name: Build
+      #   run: go build -v ./...
+      # - name: Run malware scan
+      #   uses: dell/common-github-actions/malware-scanner@reusuable-release-workflow
+      #   with:
+      #     directories: .
+      #     options: -ri          
 
       - name: Get latest tag
         id: get_latest_tag
@@ -58,14 +58,14 @@ jobs:
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
-          git tag ${{env.new_tag}}
-          git push origin ${{env.new_tag}}
+          git tag ${new_tag}
+          git push origin ${new_tag}
 
       - name: Create GitHub release
         uses: actions/create-release@v1
         with:
-          tag_name: ${{env.new_tag}}
-          release_name: Release ${{env.new_tag}}
+          tag_name: ${new_tag}
+          release_name: Release ${new_tag}
           draft: false
           prerelease: false
           body: |
