workflow input update

--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -10,7 +10,8 @@
 name: Release Libs
 
 # Invocable as a reusable workflow
-on:  
+on:
+  workflow_call:  
   workflow_dispatch:
     inputs:
       version:
